objects/Wow_Attachments__c.object
<CustomObject>
    <fields>
        <fullName>ArchitectureBlueprints__c</fullName>
        <label>ArchitectureBlueprints</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SIP Voice Blueprint</fullName>
                </value>
                <value>
                    <fullName>Avaya Replacement Blueprint</fullName>
                </value>
                <value>
                    <fullName>Digital Blueprint</fullName>
                </value>
                <value>
                    <fullName>Enterprise Workload Management Blueprint</fullName>
                </value>
                <value>
                    <fullName>WFO Solution Blueprint – Recording &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>WFO Solution Blueprint – Workforce management</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Common Components Blueprint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <label>Demo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gdemo (Gbank)</fullName>
                </value>
                <value>
                    <fullName>Gdemo Local (iDemoSrv)</fullName>
                </value>
                <value>
                    <fullName>Demo on Demand</fullName>
                </value>
                <value>
                    <fullName>Premier Demo</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Activity__c</fullName>
        <label>Discovery Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CC Visit</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement Workshop</fullName>
                </value>
                <value>
                    <fullName>Employee Engagement Workshop</fullName>
                </value>
                <value>
                    <fullName>Business Optimization Workshop</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Assessment Workshop</fullName>
                </value>
                <value>
                    <fullName>Security Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fit__c</fullName>
        <label>Fit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Use_Case__c</fullName>
        <label>Functional Use Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound: CE01 - Connect Voice Interaction to right resource</fullName>
                    <label>CE01: Inbound - Connect Voice Interaction to right resource</label>
                </value>
                <value>
                    <fullName>Inbound: CE02 - Personalized &amp; Value based Voice routing</fullName>
                    <label>CE02: Inbound - Personalized &amp; Value based Voice routing</label>
                </value>
                <value>
                    <fullName>Inbound: CE03 - Dynamic Voice Call Back</fullName>
                    <label>CE03: Inbound - Dynamic Voice Call Back</label>
                </value>
                <value>
                    <fullName>Inbound: CE04 - Access Experts across the enterprise with Skype for Business</fullName>
                    <label>CE04: Inbound - Access Experts across the enterprise with Skype for Business</label>
                </value>
                <value>
                    <fullName>Inbound: CE05 - Increase NPS while Managing Urgent Conversations</fullName>
                    <label>CE05: Inbound - Increase NPS while Managing Urgent Conversations</label>
                </value>
                <value>
                    <fullName>Inbound: CE06 -  Extend Mobile to Video Calls</fullName>
                    <label>CE06: Inbound - Extend Mobile to Video Calls</label>
                </value>
                <value>
                    <fullName>Self-Service: CE07 - Effective Identification and Validation in IVR</fullName>
                    <label>CE07: Self-Service - Effective Identification and Validation in IVR</label>
                </value>
                <value>
                    <fullName>Self-Service: CE08 - Payment Capture in IVR</fullName>
                    <label>CE08: Self-Service - Payment Capture in IVR</label>
                </value>
                <value>
                    <fullName>Self-Service: CE09 - Personalized IVR</fullName>
                    <label>CE09: Self-Service - Personalized IVR</label>
                </value>
                <value>
                    <fullName>Self-Service: CE10 - Extend IVR to Visual IVR</fullName>
                    <label>CE10: Self-Service - Extend IVR to Visual IVR</label>
                </value>
                <value>
                    <fullName>Outbound: CE11 - Improve Telesales Success by Moving Beyond Cold Calling</fullName>
                    <label>CE11: Outbound - Improve Telesales Success by Moving Beyond Cold Calling</label>
                </value>
                <value>
                    <fullName>Outbound: CE12 - Proactively keep customers informed via SMS notifications</fullName>
                    <label>CE12: Outbound - Proactively keep customers informed via SMS notifications</label>
                </value>
                <value>
                    <fullName>Outbound: CE13 - Proactively keep customers informed via multi-channel with preference management</fullName>
                    <label>CE13: Outbound - Proactively keep customers informed via multi-channel with preference management</label>
                </value>
                <value>
                    <fullName>Outbound: CE14 - Proactive contact based on customer context and journey</fullName>
                    <label>CE14: Outbound - Proactive contact based on customer context and journey</label>
                </value>
                <value>
                    <fullName>Outbound: CE15 - Accelerate Payments Collected Using Multiple Channels</fullName>
                    <label>CE15: Outbound - Accelerate Payments Collected Using Multiple Channels</label>
                </value>
                <value>
                    <fullName>Digital: CE16 - Route Digital Interactions to Right Resources - E-mail</fullName>
                    <label>CE16: Digital - Route Digital Interactions to Right Resources - E-mail</label>
                </value>
                <value>
                    <fullName>Digital: CE17 - Automated Response Based on Content Analysis</fullName>
                    <label>CE17: Digital - Automated Response Based on Content Analysis</label>
                </value>
                <value>
                    <fullName>Digital: CE18 - Route Digital Interaction to Right Resource - Chat</fullName>
                    <label>CE18: Digital - Route Digital Interaction to Right Resource - Chat</label>
                </value>
                <value>
                    <fullName>Digital: CE19 - Implement Social Media in Your Contact Center</fullName>
                    <label>CE19: Digital - Implement Social Media in Your Contact Center</label>
                </value>
                <value>
                    <fullName>Digital: CE20 - Personalized (cross-channel context) &amp; Value Based Routing for Digital Channels</fullName>
                    <label>CE20: Digital - Personalized (cross-channel context) &amp; Value Based Routing for Digital Channels</label>
                </value>
                <value>
                    <fullName>Digital: CE21 - Enable Intelligent Click-to-Call Option for Your Website or App</fullName>
                    <label>CE21: Digital - Enable Intelligent Click-to-Call Option for Your Website or App</label>
                </value>
                <value>
                    <fullName>Digital: CE22 - Enable Callback Option for Your Website or App</fullName>
                    <label>CE22: Digital - Enable Callback Option for Your Website or App</label>
                </value>
                <value>
                    <fullName>Digital: CE23 - Monitor Customer Behavior on Your Website</fullName>
                    <label>CE23: Digital - Monitor Customer Behavior on Your Website</label>
                </value>
                <value>
                    <fullName>Digital: CE24 - Proactive Chat for Sales</fullName>
                    <label>CE24: Digital - Proactive Chat for Sales</label>
                </value>
                <value>
                    <fullName>Digital: CE25 - Proactive Engagement with Chat or Callback</fullName>
                    <label>CE25: Digital - Proactive Engagement with Chat or Callback</label>
                </value>
                <value>
                    <fullName>Digital: CE26 - Proactive Live Assistance Across any Channel</fullName>
                    <label>CE26: Digital - Proactive Live Assistance Across any Channel</label>
                </value>
                <value>
                    <fullName>Digital: CE27 - Offer Voice or Chat Support for Web Co-browse Experience</fullName>
                    <label>CE27: Digital - Offer Voice or Chat Support for Web Co-browse Experience</label>
                </value>
                <value>
                    <fullName>Digital: CE28 - Implement Knowledge Base Access for Self and Agent Assisted Interactions</fullName>
                    <label>CE28: Digital - Implement Knowledge Base Access for Self and Agent Assisted Interactions</label>
                </value>
                <value>
                    <fullName>Digital: CE29 - Route Digital Interactions to Right Resource - SMS</fullName>
                    <label>CE29: Digital - Route Digital Interactions to Right Resource - SMS</label>
                </value>
                <value>
                    <fullName>Workforce Optimization: EE01 - Optimize agent utilization for voice interactions</fullName>
                    <label>EE01: Workforce Optimization - Optimize agent utilization for voice interactions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Usecases_Numbers__c</fullName>
        <label>Smart Use Cases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_URL__c</fullName>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As is</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <displayFormat>A-{000000}</displayFormat>
        <label>RowNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Row_Number__c</fullName>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Transition__c</fullName>
        <label>Services Transition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Kick-off meeting</fullName>
                </value>
                <value>
                    <fullName>Customer Kick-off meeting</fullName>
                </value>
                <value>
                    <fullName>Implementation Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Functional Use Case</fullName>
                </value>
                <value>
                    <fullName>Architectural Blueprint</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Discovery Finding</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Services Transition</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Vision Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Activity__c</fullName>
        <label>Vision Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vision Clip (Add Link)</fullName>
                </value>
                <value>
                    <fullName>Vision Presentation (Attach Document)</fullName>
                </value>
                <value>
                    <fullName>CX Safari</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wow_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SC Engagement Form</label>
        <referenceTo>Wow_Request_Form__c</referenceTo>
        <relationshipLabel>Wow Attachments</relationshipLabel>
        <relationshipName>Wow_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SC Engagement Fn Use Case/Arc Blue Print</label>
    <nameField>
        <label>WowAttachments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wow Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>